--- a/style.css
+++ b/style.css
@@ -3,27 +3,27 @@
     padding: 0px;
 }
 .article-container{
-    max-width: 90vw;
+    max-width: 70vw;
     display: flex;
-    gap: 5px;
+    gap: 20px;
     margin: 50px auto;
     border-style: solid;
     border-width: 1px;
-    border-color: whitesmoke;
+    border-color: gainsboro;
+    background-color: whitesmoke;
     border-radius: 10px;
 }
 
 .photo-container{
     height: 220px;
-    width: 20%;
+    width: 40%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
 .writings{
     height: 200px;
-    width: 80%;
-    background-color: whitesmoke;
+    max-width: 65%;
     padding: 20px 20px 0px 20px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -72,7 +72,6 @@ button:hover{
 @media screen and (max-width:576px) {
     .article-container{
         flex-direction: column;
-        margin: 20px auto 20px;
     }
 
     .photo-container{
@@ -82,7 +81,7 @@ button:hover{
         border-bottom-left-radius: 0px;
     }
     .writings{
-        width: 95%;
         height: auto;
+        max-width: 100%;
     }
 }
